# Vantage-AI

./: .env.example  .gitignore  AGENTS.md  LICENSE  README(KOR).md  README.md  pyproject.toml  run_scans.py  test_ffuf.py  test_httpx.py  test_nmap.py  test_nmap_thread.py
scanner/: cli.py  config.py  extension_recommendations.py  installer.py  models.py  note_suggestions.py  report.py  runner.py  runner_artifacts.py  runner_cursor.py  runner_report.py  scan_mode.py  state.py  storage.py  watchdog.py  web.py  web_assets.py  web_execution.py  web_responses.py  web_utils.py  web_views.py  wordlist_recommendations.py
scanner/adapters/: gau_runner.py  (+14 more)
tests/: conftest.py  test_access_control.py  test_ai_triage.py  test_assetfinder_runner.py  test_banner_probe.py  test_cidr_slash24.py  test_cli.py  test_config_headers.py  test_crtsh_runner.py  test_cve_candidates.py  test_cve_match.py  test_dirscan_calibration.py  test_dirscan_normalizer.py  test_dnsx_wildcard.py  test_domain_discovery.py  test_extension_recommendations.py  test_ffuf_dirscan_workers.py  test_ffuf_runner.py  test_hidden_ports.py  test_httpx_runner.py  test_integration_live_scan.py  test_models.py  test_nmap_runner.py  test_note_suggestions.py  test_portscan_normalizer.py  test_report.py  test_runner.py  test_scan_mode.py  test_securitytrails_runner.py  test_ser_auth_session.py  test_service_notes.py  test_state.py  test_subdomain_normalizer.py  test_subfinder_runner.py  test_waf_signatures.py  test_web.py  test_wordlist_recommendations.py
wordlists/: README.md  jeus-watjs.txt  nextjs.txt  small.txt  test.txt
(+39 files in other folders)
