[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-scanner"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.8",
  "typer>=0.12",
  "rich>=13.7",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.6",
  "mypy>=1.11",
  "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
include = ["scanner*"]

[tool.setuptools.package-data]
scanner = ["sql/schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
exclude = ["wordlists/SecLists-master/.bin"]

[tool.mypy]
python_version = "3.12"
strict = false

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true
